--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@ location.href="index.html";
 </script>
 </FORM>
     <header>
+	    <center><div id="google_translate_element"></div></center>
 <hgroup>
     <ul>
        <h1>  Zhenya Vovchyk </h1>
@@ -319,13 +320,12 @@ location.href="index.html";
     </ul>
 </article>
      </section> 
-	<div id="google_translate_element"></div>
-<script type="text/javascript">
-function googleTranslateElementInit() 
-	{
+	<script type="text/javascript">
+function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT, multilanguagePage: true}, 'google_translate_element');
 }
 </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+        
         
 </body>
 </html>
